--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My html page</title>
   </head>
-  <body></body>
+  <body>
+    <div id="main">
+      <h1>Hi</h1>
+      <p>what a good day</p>
+    </div>
+  </body>
 </html>
