feat: add hihihi in p tag

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="main">
       <h1>Hi</h1>
-      <p>what a good day</p>
+      <p>what a good day hihihi</p>
     </div>
   </body>
 </html>
