--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My html page</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>header</h1>
+    </header>
+    <section></section>
+    <footer>
+     footer
+    </footer>
+  </body>
 </html>
