feat : set profile on index.html
added username, location, lang, food

--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
   </head>
   <body>
     <header>
-      <h1>header</h1>
+      <h1>Profile</h1>
     </header>
     <section> 
       <div id="main">
-        <h1>Hi</h1>
-        <p>what a good day hihihi</p>
+	username: SaltPepperSalt
+	location: Seoul, Korea
+	lang: Javascript
+	food: Energy Drink
       </div>
     </section>
-    <footer>
-     footer
-    </footer>
   </body>
 </html>
