--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <body>
     <header>
       <h1>Profile</h1>
+      <ul>
+	<li><a href="#">Home</a></li>
+	<li><a href="#">blog</a></li>
+	<li><a href="#">About</a></li>
+      </ul>
+
     </header>
     <section> 
       <div id="main">
