feat: add featured-post aside

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 	lang: Javascript
 	food: Energy Drink
       </div>
+      
+      <aside>
+        featured post
+      </aside>
     </section>
   </body>
 </html>
