feat : init footer on index.html

--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
         featured post
       </aside>
     </section>
+    <footer>
+      <p>Copyright by SPS. All rights reserved.</p>
+    </footer>
   </body>
 </html>
